dates in trip display

--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
             font-size: 14px;
         }
         
+        .trip-dates {
+            color: #1976d2;
+            font-size: 12px;
+            font-weight: 500;
+            margin-top: 8px;
+        }
+        
         .legs-container {
             background: white;
             border-radius: 8px;
